# haskell-logic-circuits

./: .gitignore  Main.hs  README.md  Tests.hs  logicsim.cabal
Logic/: Byte.hs  CPU.hs  Classes.hs  Memory.hs  Types.hs
app/: Main.hs  TUI.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: logicsim-0.1.0.0-inplace.conf  package.cache
src/: Bit.hs  Byte.hs  CPU.hs  Circuits.hs  Classes.hs  Gates.hs  Memory.hs  Types.hs  Utils.hs
