cabal-version:      3.0
name:               logicsim
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Classes,
      Types,
      Bit,  
      Byte,
      Gates,
      Circuits,
      Memory,
      CPU,
      Utils
    build-depends:    
      base >= 4.7 && < 5,
      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable logic-sim
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base,
        logicsim,
        layoutz,
        process
    hs-source-dirs:   .
    default-language: Haskell2010

test-suite logic-sim-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   .
    main-is:          Tests.hs
    build-depends:    
        base,
        logicsim
